--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock,Paper,Scissors</title>
     <link rel="stylesheet" href="style.css">
     <<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
 <body>
     <main>
         <h1>Rock Paper Scissors</h1>
-        <p id="answerText"></p>
+        <p id="answerText">You're about to be the immediate past president of the being alive club.</p>
         <div class="top">
             <div class="playerCon"><img src="images/rps.jpg" alt="" class="gameImg playerImg"></div>
             <div class="score">
@@ -25,15 +25,16 @@
             <div class="computerCon"><img src="images/rps.jpg" alt="" class="gameImg computerImg"></div>
         </div>
         <p class="gameRound">Round 0 of 10</p>
+
         <div class="bottom">
-            <button id="rock"><img class="choose" src="images/rock.jpg" alt=""></button>
 
-            <button id="paper"><img class='choose' src="images/paper.jpg" alt=""></button>
+            <button id="rock"><img class="choose" src="images/rock.jpg" alt="" ></button>
 
-             <button id="scissors"><img src="images/scissors.jpg" alt="" class="choose"></button>
+            <button id="paper"><img class='choose' src="images/paper.jpg" alt="" ></button>
+
+            <button id="scissors"><img src="images/scissors.jpg" alt="" class="choose" ></button>
         </div>
 
-        <button class="lol">sdfhgdsfhsdfhdsfh</button>
     </main>
 </body>
 </html>
